profilelist1exp/unpackaged/objects/A3_Proposal__c.object
<CustomObject>
    <description>Custom object used for storing Proposals created by Sales/Partners within the A3 application (US 4927613/ CR #15709)</description>
    <fields>
        <fullName>A3_Proposal_ID__c</fullName>
        <externalId>true</externalId>
        <label>A3 Proposal ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>A3_Proposal_Name__c</fullName>
        <label>A3 Proposal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>A3_Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Date__c</fullName>
        <label>Associated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>A3 Proposals</relationshipLabel>
        <relationshipName>A3_Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>A3 Proposal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>A3_Proposal_ID__c</columns>
        <columns>A3_Proposal_Name__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Associated_By__c</columns>
        <columns>Associated_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A3-{00000000}</displayFormat>
        <label>SFDC A3 ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A3 Proposals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>